tests/ui/wrong_signature.stderr
error[E0053]: method `__spec_compute` has an incompatible type for trait
  --> tests/ui/wrong_signature.rs:10:26
   |
10 |     fn compute(&self, x: u32) -> f64 { f64::from(x) }
   |                          ^^^ expected `f64`, found `u32`
   |
note: type in trait
  --> tests/ui/wrong_signature.rs:5:30
   |
 5 |         fn compute(&self, x: f64) -> f64;
   |                              ^^^
   = note: expected signature `fn(&Bar, f64) -> f64`
              found signature `fn(&Bar, u32) -> f64`
help: change the parameter type to match the trait
   |
10 -     fn compute(&self, x: u32) -> f64 { f64::from(x) }
10 +     fn compute(&self, x: f64) -> f64 { f64::from(x) }
   |

error[E0053]: method `__try_compute_as_bar` has an incompatible type for trait
  --> tests/ui/wrong_signature.rs:10:26
   |
10 |     fn compute(&self, x: u32) -> f64 { f64::from(x) }
   |                          ^^^ expected `f64`, found `u32`
   |
note: type in trait
  --> tests/ui/wrong_signature.rs:5:30
   |
 5 |         fn compute(&self, x: f64) -> f64;
   |                              ^^^
   = note: expected signature `fn(&Bar, f64) -> Option<f64>`
              found signature `fn(&Bar, u32) -> Option<f64>`
help: change the parameter type to match the trait
   |
10 -     fn compute(&self, x: u32) -> f64 { f64::from(x) }
10 +     fn compute(&self, x: f64) -> f64 { f64::from(x) }
   |

error[E0308]: mismatched types
  --> tests/ui/wrong_signature.rs:9:1
   |
 9 | / devirt::r#impl!(WrongSig for Bar [hot] {
10 | |     fn compute(&self, x: u32) -> f64 { f64::from(x) }
11 | | });
   | |  ^
   | |  |
   | |__expected `f64`, found `u32`
   |    arguments to this method are incorrect
   |
note: method defined here
  --> tests/ui/wrong_signature.rs:3:1
   |
 3 | / devirt::r#trait! {
 4 | |     pub WrongSig [Bar] {
 5 | |         fn compute(&self, x: f64) -> f64;
   | |                           -
 6 | |     }
 7 | | }
   | |_^
   = note: this error originates in the macro `$crate::impl` which comes from the expansion of the macro `devirt::trait` (in Nightly builds, run with -Z macro-backtrace for more info)
